# imessage-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  conditions.yaml  current_roadmap.md  pyproject.toml  watch.md
agents/: _global.md  _golden_rule.md  daily.md  daily.user.md  monthly.md  monthly.user.md  weekly.md  weekly.user.md
scripts/: make_synthetic_fixture.py  run_local.sh
src/text_triage/: __init__.py  cli.py  config.py  engine.py  extract.py  prompts.py  schema.py  skeleton.py  state_io.py  summarize.py  tags.py
src/text_triage/collect/: collector.py  extract.py
src/text_triage/server/: app.py  raw_store.py  scheduler.py
src/text_triage/state/: schema.py  state_io.py
src/text_triage/triage/: engine.py  prompts.py  skeleton.py  summarize.py  tags.py
tests/: conftest.py  test_acceptance.py  test_cli.py  test_collector.py  test_config.py  test_engine.py  test_extract.py  test_prompts.py  test_raw_store.py  test_scheduler.py  test_schema.py  test_server.py  test_skeleton.py  test_state_io.py  test_summarize.py  test_tags.py
tests/fixtures/: synthetic_export.expected_state.json  synthetic_export.json
