[project]
name = "text-triage"
version = "0.1.0"
description = "Turn noisy iMessage history into a small, type-validated state.json served over MCP."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Pick the backend you use (engine.provider). Both are imported lazily; the test suite needs neither.
litellm = ["litellm>=1.40"]        # provider: litellm — any model via API key (incl. the Claude API)
agent-sdk = ["claude-agent-sdk"]   # provider: agent_sdk — Anthropic on a Claude Max plan

[project.scripts]
text-triage = "text_triage.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text_triage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
